# Moises

./: .replit  DOCUMENTACION_ACADEMICA_SISTEMA_GENESIS.md  DOCUMENTACION_COMPLETA_SISTEMA_GENESIS.md  Dockerfile  INFORME_INTEGRADO_SISTEMA_GENESIS.md  README.md  README_API_Integration.md  README_ASYNC_QUANTUM.md  README_COSMIC_STIMULATOR.md  README_DIVINE_SYSTEM.md  README_DeepSeek.md  README_KRONOS_SHARING.md  README_MODO_AUTONOMO.md  README_QUANTUM_EXCHANGE.md  README_SERAPHIM_GABRIEL.md  README_para_mortales.md  RESUMEN_EJECUTIVO_SISTEMA_GENESIS.md  __init__.py  activate_autonomous_mode.py  activate_consciousness.py  aetherion.py  aetherion_config.json  alert_entity.py  analisis_transmutaciones_luminosas.md  api_integration.py  app.py  armageddon_api.py  armageddon_cosmic.sh  armageddon_output.txt  armageddon_routes.py  atemporal_test_minimal.py  auth_routes.py  autonomous_entity.py  autonomous_reaction_module.py  bonus_routes.py  buddha_config.json  build.sh  build_client.py  build_react.py  build_vite.sh  (+230 more)
attached_assets/: Pasted--Adaptador-Trascendental-para-reemplazar-el-EventBus-con-WebSocket-API-Local-Este-m-dulo-implem-1742706545730.txt  Pasted--Analytics-manager-import-json-import-logging-import-os-from-typing-import-D-1742715802558.txt  Pasted--Balance-Manager-import-logging-import-asyncio-import-random-from-typing-import-Dict-Any-1742715477786.txt  Pasted--Bb-qu-buena-pregunta-Proto-Genesis-se-puede-integrar-en-muchos-m-s-lugares-dentro-de-Genesis-y--1742903545708.txt  (+160 more)
checkpoints/: intermittent_test_2d5ef3c053ad464484099333eb8bfba9_data.pickle  (+19 more)
(+751 files in other folders)
