[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "ccxt>=4.4.69",
    "email-validator>=2.2.0",
    "fastapi>=0.115.11",
    "flask-cors>=5.0.1",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.10.6",
    "python-jose>=3.4.0",
    "python-multipart>=0.0.20",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "sqlalchemy>=2.0.39",
    "uvicorn>=0.34.0",
    "pycryptodome>=3.22.0",
    "pytest-asyncio>=0.25.3",
    "pytest-mock>=3.14.0",
    "pytest>=8.3.5",
    "typing-extensions>=4.12.2",
    "mypy>=1.15.0",
]
